quic/s2n-quic-transport/src/recovery/manager/snapshots/quic__s2n-quic-transport__src__recovery__manager__tests__events__persistent_congestion.snap
---
source: quic/s2n-quic-transport/src/recovery/manager/tests.rs
expression: ""

---
RecoveryMetrics { path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, min_rtt: 700ms, smoothed_rtt: 762.49875ms, latest_rtt: 1.2s, rtt_variance: 371.872812ms, max_ack_delay: 10ms, pto_count: 0, congestion_window: 15000, bytes_in_flight: 2 }
PacketLost { packet_header: OneRtt { number: 2 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
PacketLost { packet_header: OneRtt { number: 3 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
PacketLost { packet_header: OneRtt { number: 4 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
PacketLost { packet_header: OneRtt { number: 5 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
PacketLost { packet_header: OneRtt { number: 6 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
PacketLost { packet_header: OneRtt { number: 7 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
PacketLost { packet_header: OneRtt { number: 8 }, path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, bytes_lost: 1, is_mtu_probe: false }
Congestion { path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, source: PacketLoss }
RecoveryMetrics { path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, min_rtt: 200ms, smoothed_rtt: 692.186406ms, latest_rtt: 200ms, rtt_variance: 401.95121ms, max_ack_delay: 10ms, pto_count: 0, congestion_window: 15000, bytes_in_flight: 2 }
RecoveryMetrics { path: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 0.0.0.0:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, min_rtt: 1s, smoothed_rtt: 1s, latest_rtt: 1s, rtt_variance: 500ms, max_ack_delay: 10ms, pto_count: 0, congestion_window: 15000, bytes_in_flight: 3 }
